Fixed Misaligned Events

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,3 +1,11 @@
-.calendar-container
+.main-content
   height: 100%
-  width: 100%
+
+  .height-controlled
+    height: 56px
+    max-height: 56px
+
+  .calendar-container
+    height: calc(100% - 56px)
+    overflow: hidden
+
