--- a/src/app/main/main.component.sass
+++ b/src/app/main/main.component.sass
@@ -1,4 +1,3 @@
 .calendar
-  height: auto
-  width: 100%
   padding-bottom: 20px
+  width: 100%
