--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,8 +4,12 @@
   box-sizing: border-box
 
 html, body
-  overflow: hidden
   text-rendering: geometricPrecision
+  height: 100%
+  width: 100%
+  overflow: hidden
+  margin: 0
+  padding: 0
 
 menu
   padding: 0
